--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -23,8 +24,10 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "^1.8.0",
     "react-native-paper": "^5.11.1",
