--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.20",
     "camelize": "^1.0.1",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
