--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
